it kindof works, but I am so so mad on Claude. maybe i'm just tired and stupid, but it's making some huge blunders
